# FyeldGenerator

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  Readme.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
FyeldGenerator/: __init__.py  core.py
tests/: test_core.py
