[metadata]
name = FyeldGenerator
version = 0.1.7
description = Simple package to symmetric generate random field.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/FyeldGenerator
author = Corentin Cadiou
author_email = contact@cphyc.me
license = file: LICENSE
license_file = LICENSE
classifiers =
    Development status :: 1 - Alpha
    License :: CC-By-SA2.0
    Programming Language :: Python
    Topic :: Gaussian Random Field

[options]
packages = find:
install_requires =
    numpy
include_package_data = True
