[metadata]
name = FyeldGenerator
version = 0.1.7
description = Simple package to symmetric generate random field.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/FyeldGenerator
author = Corentin Cadiou
author_email = contact@cphyc.me
license = CC-BY-SA2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
include_package_data = True
